# DynamixelManager

./: .gitignore  CMakeLists.txt  COPYING
lib/: CMakeLists.txt
lib/qserialdevice/: CMakeLists.txt
lib/qserialdevice/qserialdevice/: abstractserial.cpp  nativeserialnotifier_win.cpp
lib/trilogger/: CMakeLists.txt
src/: CMakeLists.txt  dynamixelbus.cpp  dynamixelmanager.cpp  dynamixelmanager.h  dynamixelmanager.ui  icons.qrc  main.cpp  selectserialport.cpp  selectserialport.h  servosvector.cpp
src/gui/: CMakeLists.txt  DynamixelBusModel.cpp  DynamixelBusModel.h  baudrates.h  dynamixelbus.cpp  dynamixelbus.h  dynamixelmanager.cpp  dynamixelmanager.h  dynamixelmanager.ui  dynamixelservo.h  dynamixelservos.h  main.cpp  searchservosdialog.cpp  searchservosdialog.h  searchservosdialog.ui  selectserialport.cpp  selectserialport.h  selectserialport.ui
src/qserialdevice/: CMakeLists.txt  src.pro
src/qserialdevice/qserialdevice/: nativeserialengine.cpp  nativeserialengine_unix.cpp  nativeserialengine_win.cpp
src/qserialdevice/qserialdeviceenumerator/: serialdeviceenumerator_p_unix.cpp
src/trilogger/: CMakeLists.txt
